# lite-agent-lib

./: .gitignore  AGENT_SPEC_PLAN.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  lite_agent_cli.py
.agent/: README.md  spec-rules.md
.claude/: settings.local.json
.github/workflows/: spec-validation.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/agent/: config.rs  error.rs  mod.rs  runner.rs  spawned.rs  tests.rs
crates/core/src/agents/: mod.rs
crates/core/src/agents/claude/: config.rs  mod.rs  types.rs
crates/core/src/agents/cursor/: config.rs  mod.rs  types.rs
crates/core/src/logs/: collector.rs  mod.rs
crates/core/src/protocol/: control.rs  messages.rs  mod.rs
crates/core/src/session/: mod.rs
crates/core/src/workspace/: mod.rs
crates/examples/: Cargo.toml  README.md
crates/examples/examples/: agent_runner.rs  basic_echo.rs  basic_shell.rs  claude_agent.rs  claude_code_cli.rs  cursor_agent.rs  custom_agent.rs
crates/examples/src/: lib.rs
crates/examples/src/agents/: claude_agent.rs  echo_agent.rs  mod.rs  shell_agent.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  handlers.rs  lib.rs  routes.rs
docs/: _backup_comparing_with_other_app.md  api_reference.md  architecture.md  rest_api.md  workspace_and_agent_configuration.md
docs/reference/: README.md  agent-lifecycle.md  architecture.md  multi-agent-abstraction.md  multi-agent-system.md  protocol-communication.md
python/: README.md  pyproject.toml
python/examples/: basic_echo.py  basic_shell.py  custom_agent.py
python/lite_agent_client/: __init__.py  client.py  models.py
python/tests/: __init__.py  test_client.py  test_models.py
scripts/: README.md  new-spec.sh
scripts/githooks/: pre-commit
specs/: README.md  spec_20260106_000001_feature_--global-cli-python-script.implementation.md  spec_20260106_000001_feature_--global-cli-python-script.md  spec_20260108_000002_feature_--cursor-claude-agent-support.implementation.md  spec_20260108_000002_feature_--cursor-claude-agent-support.md
tests/cli/: test_lite_agent_cli.py
