[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/examples",
]

[workspace.package]
edition = "2024"
authors = ["lite-agent-lib contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"

# Process management
command-group = { version = "5.0", features = ["with-tokio"] }

# Git operations
git2 = "0.20"

# Async streams
tokio-stream = "0.1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "codec"] }
bytes = "1.0"
async-stream = "0.3"

# Testing
tempfile = "3.0"
