[package]
name = "lite-agent-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lite-agent-core = { path = "../core" }
lite-agent-examples = { path = "../examples" }

# Async runtime
tokio = { workspace = true }
async-stream = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
